--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="author" content="rm0819">
-    <meta name="description" content="rm0819's Various Web Projects">
-    <meta name="keywords" content="rm0819">
+    <meta name="author" content="romdotzip">
+    <meta name="description" content="romdotzip's Various Web Projects">
+    <meta name="keywords" content="romdotzip">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -14,7 +14,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>rm0819's Homepage</title>
+    <title>romdotzip's Homepage</title>
     <link rel="stylesheet" href="/src/css/style.css">
   </head>
 
